# crawling_webmotors

./: README.md  pyproject.toml
app/: creating_connections.py  exporting_items.py  getting_links.py  main.py  scroll_down_pages.py
data/: documento_anuncio.html  html_exemplo.html  search_links.json  search_parameters.json
